<resources>
    <string name="app_name">\';--HaveIBeenPwned</string>
    <string name="sortBy">Sort By…</string>
    <string name="sortBreachDateAsc">Breach Date Asc.</string>
    <string name="sortBreachDateDesc">Breach Date Desc.</string>
    <string name="sortNameAsc">Site Name Asc.</string>
    <string name="breachDate">Breach Date:</string>
    <string name="addedDate">Date added to HIBP:</string>
    <string name="compromisedData">Compromised Data:</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchForEmail">Email Address...</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortNameDesc">Site Name Desc.</string>
    <string name="sortPwnAsc">Pwn Count Asc.</string>
    <string name="sortPwnDesc">Pwn Count Desc.</string>
    <string name="breachasc">breachAsc</string>
    <string name="nameAsc">nameAsc</string>
    <string name="nameDesc">nameDesc</string>
    <string name="breachDesc">breachDesc</string>
    <string name="pwnAsc">pwnAsc</string>
    <string name="pwnDesc">pwnDesc</string>
    <string name="sortAddedAsc">Date Added Asc</string>
    <string name="sortAddedDesc">Date Added Desc</string>
    <string name="breachDateTitle">Breach Date...</string>
    <string name="addedDateTitle">Added Date...</string>
    <string name="pwnCountTitle">Pwn Count...</string>
    <string name="siteNameTitle">Site Name...</string>
    <string name="sortByTitle">Sort By...</string>
    <string name="ascending">Asc.</string>
    <string name="descending">Desc.</string>
    <string name="add">Add</string>
    <string name="delete">DELETE</string>
</resources>
